# rspack-ssr

./: .gitignore  Cargo.toml  package-lock.json  package.json  rspack.config.js  tsconfig.json
.github/workflow/: copilot-setup-steps.yml
.github/workflows/: validate-ssr-rspack.yml
frontend/: index.tsx
frontend/styles/: style.css
src/: main.rs
templates/: index.html
