[package]
name = "rspack-ssr"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
tera = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
env_logger = "0.10"
log = "0.4"
regex = "1.0"
# RSPack Rust crates for bundling and compilation

rspack_core = "0.2"        # Core bundling functionality
rspack_binding_options = "0.2"  # Configuration options
rspack_plugin_javascript = "0.2"  # JavaScript/TypeScript handling
rspack_plugin_css = "0.2"        # CSS processing

